--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.12.2-1.03'
+version = '1.12.2-2.0'
 group = 'com.github.aechtrob.pnpermian' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'pnpermian'
 
@@ -62,7 +62,7 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2854'
 
-    compile files('libs/lepidodendron-1.12.2-54.0.jar')
+    compile files('libs/lepidodendron-1.12.2-55.0.jar')
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -78,7 +78,7 @@ dependencies {
     // These dependencies get remapped to your current MCP mappings
     // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
 
-    compile "net.ilexiconn:llibrary:1.7.19-1.12.2"
+    //compile "net.ilexiconn:llibrary:1.7.19-1.12.2"
     compile "vazkii.patchouli:Patchouli:1.0-21.4"
     
     // For more info...
@@ -157,10 +157,10 @@ sourceSets {
 }
 
 repositories {
-    maven {
-        name = "ilexiconn"
-        url = "https://maven.mcmoddev.com"
-    }
+    //maven {
+    //    name = "ilexiconn"
+    //    url = "https://maven.mcmoddev.com"
+    //}
     maven { url 'https://maven.blamejared.com' }
 }
 
